using UnityEngine;

public class StringAnimCollection : MonoBehaviour
{
    // Zombie
    public static readonly string isMove = "isMove";
    public static readonly string isIdle = "isIdle";
    public static readonly string isAttack = "isAttack";
    public static readonly string isDeath = "isDeath";
    public static readonly string typeOfIdle = "typeOfIdle";
    public static readonly string typeOfMove = "typeOfMove";
    public static readonly string typeOfAttack = "typeOfAttack";
    public static readonly string typeOfDeath = "typeOfDeath";
    public static readonly string takeDamage = "takeDamage";
    // Gun
    public static readonly string Shot = "Shot";
    public static readonly string Reload = "Reload";
    public static readonly string isRun = "isRun";
    public static readonly string resurrection = "resurrection";
}
